--- a/Source/Help/Output/articles/Toolkit/Components/KryptonOutlookGrid/CustomGrouping.html
+++ b/Source/Help/Output/articles/Toolkit/Components/KryptonOutlookGrid/CustomGrouping.html
@@ -5,17 +5,17 @@
   <head>
     <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <title>KryptonOutlookGrid | Krypton Standard Toolkit Documentation </title>
+      <title> | Krypton Standard Toolkit Documentation </title>
       <meta name="viewport" content="width=device-width">
-      <meta name="title" content="KryptonOutlookGrid | Krypton Standard Toolkit Documentation ">
+      <meta name="title" content=" | Krypton Standard Toolkit Documentation ">
     
     
-      <link rel="shortcut icon" href="../../Krypton.ico">
-      <link rel="stylesheet" href="../../styles/docfx.vendor.min.css">
-      <link rel="stylesheet" href="../../styles/docfx.css">
-      <link rel="stylesheet" href="../../styles/main.css">
-      <meta property="docfx:navrel" content="../../toc.html">
-      <meta property="docfx:tocrel" content="../toc.html">
+      <link rel="shortcut icon" href="../../../../Krypton.ico">
+      <link rel="stylesheet" href="../../../../styles/docfx.vendor.min.css">
+      <link rel="stylesheet" href="../../../../styles/docfx.css">
+      <link rel="stylesheet" href="../../../../styles/main.css">
+      <meta property="docfx:navrel" content="../../../../toc.html">
+      <meta property="docfx:tocrel" content="../../../toc.html">
     
     
     
@@ -34,8 +34,8 @@
                 <span class="icon-bar"></span>
               </button>
 
-              <a class="navbar-brand" href="../../index.html">
-                <img id="logo" class="svg" src="../../Logo.png" alt="">
+              <a class="navbar-brand" href="../../../../index.html">
+                <img id="logo" class="svg" src="../../../../Logo.png" alt="">
               </a>
             </div>
             <div class="collapse navbar-collapse" id="navbar">
@@ -67,18 +67,7 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h1 id="kryptonoutlookgrid">KryptonOutlookGrid</h1>
 
-<p>To learn more about how to use the <code>KryptonOutlookGrid</code> control, please refer to the articles below.</p>
-<ul>
-<li><a href="Components/KryptonOutlookGrid/Overview.html">Overview</a></li>
-<li><a href="Components/KryptonOutlookGrid/HowToUse.html">How to Use</a></li>
-<li><a href="Components/KryptonOutlookGrid/AdditionalColumns.html">Additional Columns</a></li>
-<li><a href="Components/KryptonOutlookGrid/CustomGrouping.html">Custom Grouping</a></li>
-<li><a href="Components/KryptonOutlookGrid/SaveAndRestoreUserGridConfiguration.html">Save &amp; Restore User's Grid Configuration</a></li>
-<li><a href="Components/KryptonOutlookGrid/SetUpConditionalFormatting.html">Set Up Conditional Formatting</a></li>
-<li><a href="Components/KryptonOutlookGrid/TreeGridMode.html">Tree Grid Mode</a></li>
-</ul>
 
 </article>
           </div>
@@ -108,8 +97,8 @@ BSD 3-Clause License
       </footer>
     </div>
 
-    <script type="text/javascript" src="../../styles/docfx.vendor.min.js"></script>
-    <script type="text/javascript" src="../../styles/docfx.js"></script>
-    <script type="text/javascript" src="../../styles/main.js"></script>
+    <script type="text/javascript" src="../../../../styles/docfx.vendor.min.js"></script>
+    <script type="text/javascript" src="../../../../styles/docfx.js"></script>
+    <script type="text/javascript" src="../../../../styles/main.js"></script>
   </body>
 </html>
