--- a/Source/Help/Output/articles/Toolkit/Components/KryptonOutlookGrid/HowToUse.html
+++ b/Source/Help/Output/articles/Toolkit/Components/KryptonOutlookGrid/HowToUse.html
@@ -5,9 +5,9 @@
   <head>
     <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <title> | Krypton Standard Toolkit Documentation </title>
+      <title>KryptonOutlookGrid - How to Use | Krypton Standard Toolkit Documentation </title>
       <meta name="viewport" content="width=device-width">
-      <meta name="title" content=" | Krypton Standard Toolkit Documentation ">
+      <meta name="title" content="KryptonOutlookGrid - How to Use | Krypton Standard Toolkit Documentation ">
     
     
       <link rel="shortcut icon" href="../../../../Krypton.ico">
@@ -67,7 +67,72 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
+<h1 id="kryptonoutlookgrid---how-to-use">KryptonOutlookGrid - How to Use</h1>
 
+<p><strong>1. Drag and drop the KryptonOutlookGrid and KryptonOutlookGridGroupBox on the Form.</strong></p>
+<p><strong>2. Associate the KryptonOutlookGridGroupBox with the grid by design time or by code using the following:</strong></p>
+<pre><code class="lang-cs">OutlookGrid1.GroupBox = KryptonOutlookGridGroupBox1;
+</code></pre>
+<p><strong>3. We need that the OutlookGrid listens to the GroupBox actions/events.</strong></p>
+<pre><code class="lang-cs">OutlookGrid1.RegisterGroupBoxEvents();
+</code></pre>
+<p>Also set to <em>true</em> the property <em>AllowDrop</em> for the <em>OutlookGrid</em>.</p>
+<p><strong>4. Design your grid by configuring your columns as you would do with the standard datagridview in unbound mode. You can do it by code or by design time.</strong></p>
+<p><em>Warning you must respect these two rules:</em></p>
+<p>The column <em>SortMode</em> property must be set to &quot;Programmatic&quot; as the grid will handle itself the sorting.
+The column Name property must not be empty (whereas the <em>HeaderText</em> could be).</p>
+<pre><code class="lang-cs">DataGridViewColumn[] columnsToAdd = new DataGridViewColumn[10];
+columnsToAdd[0] = SetupColumn(SandBoxGridColumn.ColumnCustomerID);
+columnsToAdd[1] = SetupColumn(SandBoxGridColumn.ColumnCustomerName);
+columnsToAdd[2] = SetupColumn(SandBoxGridColumn.ColumnAddress);
+...
+Grid.Columns.AddRange(columnsToAdd);
+</code></pre>
+<p><strong>5. Configure the OutlookGrid. For grouping and sorting abilities we need to precise the columns to the grid.</strong></p>
+<pre><code class="lang-cs">Grid.AddInternalColumn(columnsToAdd[0], new OutlookGridDefaultGroup(null), SortOrder.None, -1, -1);
+Grid.AddInternalColumn(columnsToAdd[1], new OutlookGridAlphabeticGroup(null), SortOrder.None, -1, -1);
+Grid.AddInternalColumn(columnsToAdd[2], new OutlookGridDefaultGroup(null), SortOrder.None, -1, -1);
+...
+</code></pre>
+<p>The different parameters for the AddInternalColumn procedure are:</p>
+<ul>
+<li>Parameter 1 : the <em>DataGridView</em> column</li>
+<li>Parameter 2 : the <em>IOutlookGridGroup</em> that will be used when the column will be grouped</li>
+<li>Parameter 3 : the sort direction</li>
+<li>Parameter 4 : the column position among grouped columns, -1 if not grouped.</li>
+<li>Parameter 5 : the column position among sorted columns, -1 if not sorted.</li>
+</ul>
+<p><em>Please note that a grouped column will automatically be sorted.</em></p>
+<p>You can customize the default group with some properties :</p>
+<ul>
+<li>Single (<em>OneItemText</em>) and multiple items (<em>XXXItemsText</em>) : this allows you to change the word &quot;item&quot; by the current object you are displaying in the grid and manage the specificities of each country regarding the plural.</li>
+<li>SortBySummaryCount : This indicates if the groups should be sorted by the number of elements in each group rather the group element value</li>
+<li>ItemsComparer : for complex objects you can set your own comparer. It will be used during sort operations.</li>
+<li>Interval : only for the <em>OutlookGridDateTimeGroup</em>, you can specify type of grouping you want to use : day, month, quarter, year and intelligent (such as Outlook)</li>
+</ul>
+<p><strong>6. Fill the grid with data (unbound mode only).</strong></p>
+<pre><code class="lang-cs">//Setup Rows
+OutlookGridRow row = new OutlookGridRow();
+List l = new List();
+OutlookGrid1.SuspendLayout();
+OutlookGrid1.ClearInternalRows();
+foreach (item in items)
+{
+     try
+     {
+           row = new OutlookGridRow();
+           row.CreateCells(OutlookGrid1, new object[] {
+                    item.Prop1,
+                    item.Prop2,
+                   ....
+      });
+      l.Add(row);
+}
+OutlookGrid1.ResumeLayout();
+OutlookGrid1.AssignRows(l);
+OutlookGrid1.ForceRefreshGroupBox();
+OutlookGrid1.Fill();
+</code></pre>
 
 </article>
           </div>
