--- a/Source/Help/Output/articles/Toolkit/Components/KryptonOutlookGrid/AdditionalColumns.html
+++ b/Source/Help/Output/articles/Toolkit/Components/KryptonOutlookGrid/AdditionalColumns.html
@@ -5,9 +5,9 @@
   <head>
     <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <title> | Krypton Standard Toolkit Documentation </title>
+      <title>KryptonOutlookGrid - Additional Columns | Krypton Standard Toolkit Documentation </title>
       <meta name="viewport" content="width=device-width">
-      <meta name="title" content=" | Krypton Standard Toolkit Documentation ">
+      <meta name="title" content="KryptonOutlookGrid - Additional Columns | Krypton Standard Toolkit Documentation ">
     
     
       <link rel="shortcut icon" href="../../../../Krypton.ico">
@@ -67,7 +67,45 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
+<h1 id="kryptonoutlookgrid---additional-columns">KryptonOutlookGrid - Additional Columns</h1>
 
+<h2 id="kryptondatagridviewformattingcolumn">KryptonDataGridViewFormattingColumn</h2>
+<p>This column enables the use of conditional formatting. Only one condition is allowed per column. Three types of formatting are available :</p>
+<ul>
+<li>Bar : displays value as a bar (solid or gradient filling)</li>
+<li>2-color scale : displays cells with background color varying between two colors.</li>
+<li>3-color scale : displays cells with background color varying between three colors.</li>
+</ul>
+<p><em>Figure 1 - An example of the KryptonDataGridViewFormattingColumn.</em></p>
+<p>Please see <a href="SetUpConditionalFormatting.html">here</a> for more information.</p>
+<h2 id="kryptondatagridviewpercentagecolumn">KryptonDataGridViewPercentageColumn</h2>
+<p>This column displays the percentage value with a bar. The color depends on the <em>Krypton</em> palette. If you want to make customizations, please take a look (for now) to the conditional formatting or hack the code ;).</p>
+<p><em>Figure 2 - An example of the KryptonDataGridViewPercentageColumn.</em></p>
+<h2 id="kryptondatagridviewratingcolumn">KryptonDataGridViewRatingColumn</h2>
+<p>This column displays rating cells in the <em>DataGridView</em>.</p>
+<p><em>Figure 3 - An example of the KryptonDataGridViewRatingColumn.</em></p>
+<h2 id="kryptondatagridviewtextandimagecolumn">KryptonDataGridViewTextAndImageColumn</h2>
+<p>This type column does not exist in the standard <em>DataGridView</em>. It is here to fill that gap.</p>
+<p>To use it you must add an <em>TextAndImage</em> object to the cell value :</p>
+<pre><code class="lang-cs">public TextAndImage(string text, Image img)
+</code></pre>
+<p><em>Figure 4 - An example of the KryptonDataGridViewTextAndImageColumn.</em></p>
+<h2 id="kryptondatagridviewtokencolumn">KryptonDataGridViewTokenColumn</h2>
+<p>This column allows to display data in a &quot;token&quot; format :</p>
+<pre><code class="lang-cs">/// &lt;summary&gt;
+/// Constructor
+/// &lt;/summary&gt;
+/// &lt;param name=&quot;text&quot;&gt;Text of the token&lt;/param&gt;
+/// &lt;param name=&quot;text&quot;&gt;Text of the token&lt;/param&gt;
+/// &lt;param name=&quot;bg&quot;&gt;Background color&lt;/param&gt;
+/// &lt;param name=&quot;fg&quot;&gt;Foreground text color&lt;/param&gt;
+public Token(string text, Color bg, Color fg)
+</code></pre>
+<p><em>Figure 5 - An example of the KryptonDataGridViewTokenColumn.</em></p>
+<p>There is a derived column called <em>KryptonDataGridViewTokenListColumn</em> which allows to have a list of <em>Tokens</em> displayed in the cell.</p>
+<h2 id="kryptondatagridviewtreetextcolumn">KryptonDataGridViewTreeTextColumn</h2>
+<p>This column is the key to use the tree grid mode functionality. Please see here for more information.</p>
+<p><em>Figure 6 - An example of the KryptonDataGridViewTreeTextColumn.</em></p>
 
 </article>
           </div>
