--- a/Source/Help/Output/articles/Toolkit/Components/KryptonOutlookGrid/SetUpConditionalFormatting.html
+++ b/Source/Help/Output/articles/Toolkit/Components/KryptonOutlookGrid/SetUpConditionalFormatting.html
@@ -5,9 +5,9 @@
   <head>
     <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <title> | Krypton Standard Toolkit Documentation </title>
+      <title>KryptonOutlookGrid - Set Up Conditional Formatting | Krypton Standard Toolkit Documentation </title>
       <meta name="viewport" content="width=device-width">
-      <meta name="title" content=" | Krypton Standard Toolkit Documentation ">
+      <meta name="title" content="KryptonOutlookGrid - Set Up Conditional Formatting | Krypton Standard Toolkit Documentation ">
     
     
       <link rel="shortcut icon" href="../../../../Krypton.ico">
@@ -67,7 +67,24 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
+<h1 id="kryptonoutlookgrid---set-up-conditional-formatting">KryptonOutlookGrid - Set Up Conditional Formatting</h1>
 
+<h2 id="conditional-formatting">Conditional Formatting</h2>
+<p>There are three conditional formatting types :</p>
+<ul>
+<li>Bar : displays value as a bar (solid or gradient filling)</li>
+<li>2-color scale : displays cells with background color varying between two colors.</li>
+<li>3-color scale : displays cells with background color varying between three colors.</li>
+</ul>
+<p>Conditional formatting by is done by adding:</p>
+<pre><code class="lang-cs">ConditionalFormatting cond = new ConditionalFormatting(); 
+cond.ColumnName = SandBoxGridColumn.ColumnPrice.ToString();
+cond.FormatType = EnumConditionalFormatType.TwoColorsRange; 
+cond.FormatParams = new TwoColorsParams(Color.White, Color.FromArgb(255, 255, 58, 61)); 
+Grid.ConditionalFormatting.Add(cond);
+</code></pre>
+<p>The only requirement is that the column must be a <em>KryptonDataGridViewFormattingColumn</em>.</p>
+<p>Conditional formatting comes with an integrated context menu in the grid. It contains predefined formatting and in case of not finding the exact look you want you can customize it by setting a custom rule.</p>
 
 </article>
           </div>
