--- a/Source/Help/Output/articles/Toolkit/Components/KryptonOutlookGrid/TreeGridMode.html
+++ b/Source/Help/Output/articles/Toolkit/Components/KryptonOutlookGrid/TreeGridMode.html
@@ -5,9 +5,9 @@
   <head>
     <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <title> | Krypton Standard Toolkit Documentation </title>
+      <title>KryptonOutlookGrid - TreeGridMode | Krypton Standard Toolkit Documentation </title>
       <meta name="viewport" content="width=device-width">
-      <meta name="title" content=" | Krypton Standard Toolkit Documentation ">
+      <meta name="title" content="KryptonOutlookGrid - TreeGridMode | Krypton Standard Toolkit Documentation ">
     
     
       <link rel="shortcut icon" href="../../../../Krypton.ico">
@@ -67,7 +67,21 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
+<h1 id="kryptonoutlookgrid---treegridmode">KryptonOutlookGrid - TreeGridMode</h1>
 
+<h2 id="tree-grid-mode">Tree-grid mode</h2>
+<p><em>Figure 1 - An example of an expanded node</em></p>
+<p>As treegrid mode requires algorithm with recursive parts, the code is a bit slower. You may want maximum performance if you do not need a tree mode and that's why there is a <em>FillMode</em> property which is set to <em>GroupsOnly</em> by default. To active the tree mode you need to set it to <em>GroupsAndNodes</em>. Even with tree mode enabled there is no need to have sublevels rows, allowing flexibility for your application.</p>
+<p>The tree mode is symbolized by the the +/- symbol located on cells in one column of the grid. This must column must be a <em>KryptonDataGridViewTreeTextColumn</em>.</p>
+<p>You can also choose to display or not lines between nodes <em>OutlookGrid1.ShowLines = true;</em></p>
+<p>To fill the grid with sublevels there are extra steps :</p>
+<pre><code class="lang-cs">OutlookGridRow row2 = new OutlookGridRow(); 
+row2.CreateCells(OutlookGrid1, new object[] { ... }
+</code></pre>
+<p>Then add the newly created row to its parent one by using :</p>
+<pre><code class="lang-cs">row.Nodes.Add(row2); ((KryptonDataGridViewTreeTextCell)row2.Cells[1]).UpdateStyle(); //Important : after adding to the parent node, do the same for the parent row
+listOfRows.Add(row); ((KryptonDataGridViewTreeTextCell)row.Cells[1]).UpdateStyle(); //Important : after adding to the rows list. Those steps are here to get a proper indentation (padding) of the text in the TreeTextCells
+</code></pre>
 
 </article>
           </div>
