--- a/Source/Help/DocFX/docfx-tmpl/src/styles/main.css
+++ b/Source/Help/DocFX/docfx-tmpl/src/styles/main.css
@@ -281,6 +281,10 @@ article h4 {
   transform: translateY(-2px);
 }
 
+.copy-code-button i {
+  margin-right: 4px;
+}
+
 .copy-code-button:hover {
   background: #02735f;
   transform: translateY(-1px);
