--- a/Source/Help/Output/styles/main.css
+++ b/Source/Help/Output/styles/main.css
@@ -277,8 +277,12 @@ article h4 {
   cursor: pointer;
   transition: all 0.2s ease;
   z-index: 10;
-  opacity: 0;
+  opacity: 1;
   transform: translateY(-2px);
+}
+
+.copy-code-button i {
+  margin-right: 4px;
 }
 
 .copy-code-button:hover {
